# agentic-trading-model

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: PROJECT.md  roast-verdict.md
.claude/agents/: doc-writer.md  scout.md
.github/workflows/: daily-scans.yml
.grok/: HANDOFF.md  PROJECT.md  ROADMAP.md  build-log.md  overnight-prompt.txt  plan.md  roast-verdict.md
alerts/: send_discord.py
backtest/: backtest_pead_stoploss.py  backtest_pre_earnings_all_us.py  backtest_pre_earnings_control.py  backtest_pre_earnings_timing.py  rank_pre_earnings_candidates.py  report_pead_earnings_gap.md  run_backtest.py  run_pead_all_us.py  strategies.py  verify_pead_oos_2022_2024.py  verify_pre_earnings_timing.py
backtest/results/: full_condition_trades.json  pead_results.json  pead_results_2y.json  pead_stoploss_results.json  pre_earnings_control_results.json  pre_earnings_timing_results.json  sample_hits.json
config/: .env.example  criteria.yaml
deploy/aws-option-poller/: .env.example  README.md  (+3 more)
docs/: README.md  index.html  phase-a-pead-prompt.md  pre-earnings-screen-prompt.md  sample_snapshot.json
live_scan/: daily_pre_earnings_screen.py  evaluate.py  market_data.py
robinhood_scanner/: .gitignore  README.md  requirements.txt
scripts/: docker-entrypoint.sh
stock_screener_30d/: .dockerignore  README.md  pyproject.toml
stock_screener_30d/.grok/: PROJECT.md  build-log.md  roast-verdict.md
stock_screener_30d/data/: backtest-cache.json
stock_screener_30d/scripts/: setup-aws.sh
stock_screener_30d/src/stock_screener_30d/: __init__.py  comparison.py  config.py  data.py  paper_log.py  scan_cache.py
stock_screener_30d/tests/: test_activity_log.py  test_backtest.py  test_config.py  test_paper_log.py  test_screener.py
tests/: conftest.py  test_comparison.py  test_daily_scans.py  test_day_trade_playbook.py  test_deep_research.py  test_engine_paper.py  test_journal.py  test_live.py  test_morning_paper.py  test_options_bt.py  test_paper_broker.py  test_research.py  test_risk_gate.py  test_selector_agent.py  test_send_discord.py  test_sp500_scan.py  test_strategies.py  test_strategy.py  test_targets.py  test_web.py
workflows/: README.md  core-trading-loop.md  robinhood-scanner-daily-scans.md  stock-screener-30d.md
(+78 files in other folders)
