[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-trading"
version = "0.1.0"
description = "Paper-first stock trading loop with hard risk rails (Robinhood Agentic optional live)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
llm = [
  "openai>=1.40",
]
live_quotes = [
  "yfinance>=0.2.40",
]
# paper multi-day + local watch (quotes only; still paper broker)
watch = [
  "yfinance>=0.2.40",
]

[project.scripts]
agentic-trading = "agentic_trading.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
