[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-screener-30d"
version = "0.1.0"
description = "CLI screener for 30-day stock holds with backtest validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2.40",
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32"]
all = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.115", "uvicorn[standard]>=0.32"]

[project.scripts]
stock-screener = "stock_screener_30d.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_screener_30d"]

[tool.hatch.build.targets.sdist]
include = ["src/stock_screener_30d", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]